--- a/Views/Materials/Create.cshtml
+++ b/Views/Materials/Create.cshtml
@@ -1,17 +1,16 @@
 ﻿@{
+    ViewBag.Title = "Create matrial";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
 @model aspnet2.Models.Material
 
-<h2>Новая книга</h2>
-
 @using (Html.BeginForm())
 {
-    @Html.LabelFor(model => model.Title, "Название  материала")
+    @Html.LabelFor(model => model.Title, "Title")
     <br />
     @Html.EditorFor(model => model.Title)
     <br />
     <br />
-    <input type="submit" value="Добавить" />
+    <input type="submit" value="Create" />
 }
