--- a/Views/Materials/Edit.cshtml
+++ b/Views/Materials/Edit.cshtml
@@ -1,19 +1,20 @@
-﻿@{
+﻿@model aspnet2.Models.Material
+
+@{
+    ViewBag.Title = "Matrial №" + @Model.Id;
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-@model aspnet2.Models.Material
 
-<h2>Книга № @Model.Id</h2>
 @using (Html.BeginForm("Edit", "Materials", FormMethod.Post))
 {
     <fieldset>
         @Html.HiddenFor(m => m.Id)
         <p>
-            @Html.LabelFor(m => m.Title, "Название материала")
+            @Html.LabelFor(m => m.Title, "Title")
             <br />
             @Html.EditorFor(m => m.Title)
         </p>
-        <p><input type="submit" value="Обновить" /></p>
+        <p><input type="submit" value="Update" /></p>
     </fieldset>
 }
