--- a/Views/Materials/Index.cshtml
+++ b/Views/Materials/Index.cshtml
@@ -1,14 +1,29 @@
-﻿<!DOCTYPE html>
-<html>
-<head>
-    <title>index</title>
-    <meta charset="utf-8" />
-</head>
-<body>
-    @foreach (var b in ViewBag.Materials)
-    {
-        <p>@b.Title</p>
-    }
-</body>
-</html>
+﻿@model IEnumerable<aspnet2.Models.Material>
 
+@{
+    ViewBag.Title = "Manage materials";
+    Layout = "~/Views/Shared/_Layout.cshtml";
+}
+<p>
+    @Html.ActionLink("Add new material", "Create")
+</p>
+<table>
+    <tr>
+        <th>Title</th>
+        <th>Actions</th>
+    </tr>
+
+    @foreach (var item in Model)
+    {
+        <tr>
+            <td>
+                @Html.DisplayFor(modelItem => item.Title)
+            </td>
+            <td>
+                @Html.ActionLink("Details", "Details", new { id = item.Id }) |
+                @Html.ActionLink("Edit", "Edit", new { id = item.Id }) |
+                @Html.ActionLink("Delete", "Delete", new { id = item.Id })
+            </td>
+        </tr>
+    }
+</table>
