--- a/Views/Products/Create.cshtml
+++ b/Views/Products/Create.cshtml
@@ -1,31 +1,35 @@
 ﻿@{
+    ViewBag.Title = "Create product";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
 @model aspnet2.Models.Product
 
-<h2>Новый товар</h2>
-
 @using (Html.BeginForm())
 {
-    <fieldset>
-        <legend>Товар</legend>
-
-        <p>
-            Название <br />
-            @Html.EditorFor(model => model.Title)
-        </p>
-
-        <p>
-            Материал <br />
-            @Html.DropDownListFor(model => model.MaterialId, ViewBag.Materials as SelectList)
-        </p>
-
-        <p>
-            <input type="submit" value="Добавить товар" />
-        </p>
-    </fieldset>
+    <div>
+        @Html.LabelFor(m => m.Title, "Title")
+        @Html.EditorFor(model => model.Title)
+    </div>
+    <div>
+        @Html.LabelFor(m => m.InStock, "InStock")
+        @Html.EditorFor(model => model.InStock)
+    </div>
+    <div>
+        @Html.LabelFor(m => m.SizeW, "SizeW")
+        @Html.EditorFor(model => model.SizeW)
+    </div>
+    <div>
+        @Html.LabelFor(m => m.SizeH, "SizeH")
+        @Html.EditorFor(model => model.SizeH)
+    </div>
+    <div>
+        @Html.LabelFor(m => m.Price, "Price")
+        @Html.EditorFor(model => model.Price)
+    </div>
+    <div>
+        @Html.LabelFor(m => m.MaterialId, "Material")
+        @Html.DropDownListFor(model => model.MaterialId, ViewBag.Materials as SelectList)
+    </div>
+    <input type="submit" value="Create" />
 }
-<div>
-    @Html.ActionLink("К списку товаров", "Index")
-</div>
