--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -3,8 +3,37 @@
 <head>
     <title>@ViewBag.Title</title>
     <meta charset="utf-8" />
+    <link type="text/css" rel="stylesheet" href="~/Content/Reset.css" />
+    <link type="text/css" rel="stylesheet" href="~/Content/Site.css" />
 </head>
 <body>
-	@RenderBody()
+    <header>
+        <h1>@ViewBag.Title</h1>
+    </header>
+    <div id="content">
+        <div id="content-navigation">
+            <div class="nav-link"><a href="/">Home</a></div>
+
+            @if (Session["UserTypeId"] != null && Convert.ToInt32(Session["UserTypeId"]) == 2)
+            {
+                <div class="nav-link"><a href="/Products">Manage products</a></div>
+                <div class="nav-link"><a href="/Materials">Manage materials</a></div>
+            }
+
+            @if (Session["UserId"] == null)
+            {
+                <div class="nav-link"><a href="/Login">Login</a></div>
+                <div class="nav-link"><a href="/Register">Register</a></div>
+            }
+
+            @if (Session["UserId"] != null)
+            {
+                <div class="nav-link"><a href="/Logout">Logout</a></div>
+            }
+        </div>
+        <div id="content-body">
+            @RenderBody()
+        </div>
+    </div>
 </body>
 </html>
