--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -18,6 +18,7 @@
             {
                 <div class="nav-link"><a href="/Products">Manage products</a></div>
                 <div class="nav-link"><a href="/Materials">Manage materials</a></div>
+                <div class="nav-link"><a href="/Order">Order list</a></div>
             }
 
             @if (Session["UserId"] == null)
